--- a/index.html
+++ b/index.html
@@ -1,27 +1,58 @@
+
 <!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="UTF-8">
-    <title>Hangman Game</title>
-    <!--Reset css link-->
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Hangman Game</title>
+  
+  <!-- Bootstrap CDN -->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+      <!--Reset css link-->
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <!--Custom css link-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  </head>
-<!--Content on Webpage-->
-  <body>
-    <div id="game">
-      <div class="container">
-        <div class="row">
-          <div class="clip-text clip-text_one">HANGMAN
-          </div>
-        <div class="col-md-offset-2 col-md-8">
-          <h2>Press any letter to get started!</h2>
-        </div>
-        </div>
-      </div>
-    </div>
+    <script src="assets/javascript/game.js" type="text/javascript"></script>
 
+</head>
+
+<body>
+  <div class="container">
+    <div class="clip-text clip-text_fifteen clip-text--no-textzone">HANGMAN</div>
+
+  <div>
+    <div>
+      Word to Guess <span id="wordToGuess"></span>
+    </div>
+  </div>
+   
+  <div>
+    <div>
+      Wrong Guesses: <span id="usedLetters"></span>
+    </div>
+  </div>
+  
+  <div>
+    <div>
+      Guesses Left: <span id="guessesLeft"></span>
+    </div>
+  </div>
+  
+  <div>
+    <div>
+      Win Counter: <span id="winCounter">0</span>
+    </div>
+  </div>
+  
+  <div id="lossCounter">
+    <div>
+      Loss Counter:  <span>0</span>
+    </div>
+  </div>
+  
+</div>
+<script type="text/javascript" src="assets/javascript/game.js"></script>
+</body>
+</html>
 
   </body>
 </html>
