working javascript and add beginning css style

--- a/index.html
+++ b/index.html
@@ -18,26 +18,28 @@
 <body>
   <div class="container">
     <div class="clip-text clip-text_fifteen clip-text--no-textzone">HANGMAN</div>
+    <div>Candy Edition</div>
 
-  <div>
+  <div class="word-box pull-left">
     <div>
-      Word to Guess <span id="wordToGuess"></span>
+      Word to Guess:
+      <br> <span id="wordToGuess"></span>
     </div>
   </div>
-   
-  <div>
+   <br><br><br>
+  <div class="letter-box pull-right">
     <div>
       Wrong Guesses: <span id="usedLetters"></span>
     </div>
   </div>
-  
-  <div>
+  <br><br><br>
+  <div class="guess-count pull-left">
     <div>
       Guesses Left: <span id="guessesLeft"></span>
     </div>
   </div>
-  
-  <div>
+  <br><br><br>
+  <div class="win-count pull-right">
     <div>
       Win Counter: <span id="winCounter">0</span>
     </div>
