--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   
   <!-- Bootstrap CDN -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <!--Google Fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
       <!--Reset css link-->
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <!--Custom css link-->
@@ -26,19 +28,19 @@
       <br> <span id="wordToGuess"></span>
     </div>
   </div>
-   <br><br><br>
+
   <div class="letter-box pull-right">
     <div>
       Wrong Guesses: <span id="usedLetters"></span>
     </div>
   </div>
-  <br><br><br>
+
   <div class="guess-count pull-left">
     <div>
       Guesses Left: <span id="guessesLeft"></span>
     </div>
   </div>
-  <br><br><br>
+
   <div class="win-count pull-right">
     <div>
       Win Counter: <span id="winCounter">0</span>
